<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ottawacoders.swapit.WeeklySchedule">

    <LinearLayout
        android:layout_width="426dp"
        android:layout_height="610dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/but_monday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/but_monday"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:onClick=""/>

        <Button
            android:id="@+id/but_tuesday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/but_tuesday"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/but_wednesday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/but_wednesday"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/but_thrusday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/but_thrusday"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/but_friday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif"
            android:text="@string/but_friday"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/but_saturday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/but_saturday"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/but_sunday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/but_sunday"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
